--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -33,6 +33,12 @@ sites:
     expectedStatusCodes:
       - 200
       - 500
+  - name: MioGang Drive
+    url: https://drive.ihyafauzi.my.id/
+    maxResponseTime: 5000
+    expectedStatusCodes:
+      - 200
+      - 500
 
 status-website:
   # Add your custom domain name, or remove the `cname` line if you don't have a domain
@@ -41,8 +47,8 @@ status-website:
   # baseUrl: /your-repo-name
   favicon: https://avatars.githubusercontent.com/u/43681888?v=4
   logoUrl: https://avatars.githubusercontent.com/u/43681888?v=4
-  name: mioscape.me - Server Status
-  introTitle: "Welcome to our **mioscape.me** server status page."
+  name: ihyafauzi.my.id - Server Status
+  introTitle: "Welcome to our **mioscape.my.id** server status page."
   introMessage: You can get updates on how our systems are doing. If there are interruptions to service, we will post a note here.
   theme: dark
   navbar:
