--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -34,8 +34,11 @@ sites:
       - 200
       - 500
   - name: Mioscape DNS
-    url: f71c9b.dns.nextdns.io
+    url: https://f71c9b.dns.nextdns.io/
     maxResponseTime: 5000
+    expectedStatusCodes:
+      - 200
+      - 500
   - name: MioGang Drive
     url: https://drive.ihyafauzi.my.id/
     maxResponseTime: 5000
