--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -39,20 +39,8 @@ sites:
     expectedStatusCodes:
       - 200
       - 500
-  - name: Mioscape TikTok Downloader
-    url: https://tdl.ihya.dev/
-    maxResponseTime: 5000
-    expectedStatusCodes:
-      - 200
-      - 500
-  - name: Mioscape Drive (OneDrive)
-    url: https://files.ihya.dev/
-    maxResponseTime: 5000
-    expectedStatusCodes:
-      - 200
-      - 500
-  - name: Hyperpipe on ihya.dev
-    url: https://beta.music.ihya.dev/
+  - name: Mioscape Drive
+    url: https://drive.ihya.dev/
     maxResponseTime: 5000
     expectedStatusCodes:
       - 200
